fix underline of publications

--- a/_config.yml
+++ b/_config.yml
@@ -199,7 +199,7 @@ terser:
 
 scholar:
   last_name: [Johansen]
-  first_name: [Christian, Holm]
+  first_name: [Christian Holm]
 
   style: apa
   locale: en
